Working implementation of new EventBus